--- a/View/Containers/andar.html
+++ b/View/Containers/andar.html
@@ -4,7 +4,7 @@
     <input name="cftv_pts" type="number" min="0" class="entrada" placeholder="Num de Pnts de CFTV" />
     <input name="voip_pts" type="number" min="0" class="entrada" placeholder="Num de Pnts de VOIP" />
     <label for="rack_fechado">RACK FECHADO</label>
-    <input type="checkbox" id="rack_fechado">
+    <input type="checkbox" class="rack_fechado">
     <button onclick="duplicar_andar($(this).parent().attr('id'))" class="entrada">DUPLICAR</button>
     <button onclick="excluir_andar($(this))">EXCLUIR ANDAR</button>
     <script>
