--- a/View/Styles/grid.css
+++ b/View/Styles/grid.css
@@ -1,5 +1,6 @@
 /* Layout básico responsivo */
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -50,7 +51,8 @@ table {
     border-collapse: collapse;
 }
 
-th, td {
+th,
+td {
     padding: 10px;
     text-align: left;
     border: 1px solid #ddd;
@@ -77,4 +79,55 @@ table th[colspan] {
         width: 100%;
         margin: 20px auto;
     }
+}
+
+/* Para alinhar o rótulo e o botão */
+label {
+    display: inline-flex;
+    align-items: center;
+    font-size: 1em; /* Pode ajustar o tamanho aqui */
+    color: #007bff;
+    margin-right: 8px;
+}
+
+button {
+    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+/* Para ajustar a largura dos campos */
+input[type="number"],
+select {
+    width: calc(100% - 20px); /* Ajuste conforme necessário */
+    max-width: 300px;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 1em;
+}
+
+/* Para contêineres de andares e prédios */
+.predio,
+.andar {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Para ajustar o botão 'Calcular' e 'Adicionar Prédio' */
+#divInputs button {
+    width: 100%;
+    max-width: 200px;
+    margin: 10px auto;
 }
